--- a/.github/workflows/on-pr-target-opened.yml
+++ b/.github/workflows/on-pr-target-opened.yml
@@ -15,3 +15,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: technote-space/assign-author@v1  # cspell:ignore technote
+  label-pr:
+    name: Label PR
+    runs-on: ubuntu-latest
+    steps:
+      - uses: release-drafter/release-drafter@v5.16.1
+        with:
+          disable-releaser: true
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
