--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -192,7 +192,7 @@ jobs:
     strategy:
       matrix:
         python-version: [3.7, 3.8]
-        os: [ubuntu-18.04]
+        os: [ubuntu-18.04, windows-latest]
     runs-on: ${{ matrix.os }}
     env:
       # populating AWS creds with fake values
