--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -223,6 +223,11 @@ jobs:
       - run: poetry install --extras docs -vv
       - name: Install Node Dependencies
         run: make npm-install
+      - name: Configure Pagefile  # avoid MemoryError during tests
+        if: runner.os == 'windows-latest'
+        uses: al-cheb/configure-pagefile-action@v1.2
+        with:
+          minimum-size: 8
       - name: Run Integration & Unit Tests
         # assertions assume linux so some fail when run on windows
         run: make test cov-xml
