fix step condition looking for wrong value
https://docs.github.com/en/actions/learn-github-actions/contexts#runner-context

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -224,8 +224,8 @@ jobs:
       - name: Install Node Dependencies
         run: make npm-install
       - name: Configure Pagefile  # avoid MemoryError during tests
-        if: runner.os == 'windows-latest'
-        uses: al-cheb/configure-pagefile-action@v1.2
+        if: runner.os == 'Windows'
+        uses: al-cheb/configure-pagefile-action@v1.2  # cspell:ignore cheb
         with:
           minimum-size: 16GB
           maximum-size: 16GB
