--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,3 @@
-default_language_version:
-  python: python3.8
-
 minimum_pre_commit_version: 2.6.0
 
 repos:
@@ -34,11 +31,11 @@ repos:
             (.*)?(cdk|tsconfig|tslint).json
           )$
       - id: trailing-whitespace
-  - repo: https://github.com/jumanjihouse/pre-commit-hook-yamlfmt
-    rev: 0.1.0
+  - repo: https://github.com/ITProKyle/pre-commit-hook-yamlfmt
+    rev: v0.2.0
     hooks:
       - id: yamlfmt
-        args: [--implicit_start, --mapping, '2', --offset, '2', --sequence, '4']
+        args: [--mapping, '2', --offset, '2', --sequence, '4']
         files: |
           (?x)^(
             \.github/(?!dependabot).*\.(yaml|yml)|
