--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -5,15 +5,17 @@
 # Required
 version: 2
 
+# Set the version of Python and other tools you might need
 build:
-  image: latest
+  os: ubuntu-20.04
+  tools:
+    python: '3.9'
 
 # Optionally build your docs in additional formats such as PDF and ePub
 formats: all
 
-# Optionally set the version of Python and requirements required to build your docs
+# Optionally declare the Python requirements required to build your docs
 python:
-  version: 3.8
   install:
     - method: pip
       path: .
