--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -90,7 +90,7 @@ jobs:
     name: Lint Python
     strategy:
       matrix:
-        python-version: [3.7, 3.8]
+        python-version: [3.7, 3.8, 3.9]
         os: [ubuntu-18.04, windows-latest]
     runs-on: ${{ matrix.os }}
     env:
@@ -191,7 +191,7 @@ jobs:
     name: Test Python
     strategy:
       matrix:
-        python-version: [3.7, 3.8]
+        python-version: [3.7, 3.8, 3.9]
         os: [ubuntu-18.04, windows-latest]
     runs-on: ${{ matrix.os }}
     env:
