--- a/tests/functional/cfngin/test_locked_stack/01-locked-stack.yaml
+++ b/tests/functional/cfngin/test_locked_stack/01-locked-stack.yaml
@@ -9,4 +9,4 @@ stacks:
   - name: locked-stack-bastion
     class_path: blueprints.Dummy
     variables:
-      StringVariable: ${output locked-stack-vpc::DummyId}
+      StringVariable: ${output locked-stack-vpc.DummyId}
