remove the upper `troposphere` requirement to allow `>=4`

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,7 +66,7 @@ sphinx-tabs = { version = "^3.2", optional = true }  # docs
 sphinxcontrib-apidoc = { version = "^0.3", optional = true }  # docs
 sphinxcontrib-programoutput = { version = "^0.17", optional = true }  # docs
 tomli = ">=1.2.2"
-troposphere = ">=2.4, <4"
+troposphere = ">=2.4"
 typing_extensions = "*"  # only really needed for < 3.8 but can still be used in >= 3.8
 urllib3 = "*"  # allow us to follow botocore's hard pinning without needing to update our own
 yamllint = "*"
