--- a/.github/workflows/release-management.yml
+++ b/.github/workflows/release-management.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   update_draft_release:
     name: Draft release
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
       # https://github.com/release-drafter/release-drafter
       - uses: release-drafter/release-drafter@v5.21.0
