--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,6 +70,7 @@ troposphere = ">=2.4, <4"
 typing_extensions = "*"  # only really needed for < 3.8 but can still be used in >= 3.8
 urllib3 = "*"  # allow us to follow botocore's hard pinning without needing to update our own
 yamllint = "*"
+pipenv = "2022.1.8"
 
 [tool.poetry.dev-dependencies]
 black = ">=22.1"
