Fix/eet 18 linting and tests errors (#1679)
* discovery

* updated cache@v2.1.7 to cache@v3
added PIPENV_IGNORE_VIRTUALENVS=1

* changed to ubuntu-latest
changed python setup version to 3.9

* fixed a typo

* pinned pipenv version to 2021.11.23
 required for --requirements
 changed assert value for stacks

* reverting to pipenv 2022.1.8

* removing python 3.7 tests

* fixed a linting issue with lists usage

* fixing assertion condionts for windows

* re adding python 3.7 linting

* ubuntu 18 is deprecated
fixed spelling mistake on variable

* Upgraded all packages
fixed linting errors

* reverting pipenv

* reverting moto to version 3

* moto mock punned to 3.0.5

* fix

* bumped precommithooks version

* modified:   Makefile
	modified:   poetry.lock
	modified:   pyproject.toml
	modified:   runway/cfngin/hooks/aws_lambda.py
	modified:   runway/cfngin/hooks/staticsite/auth_at_edge/lambda_config.py
	modified:   runway/context/_runway.py
	modified:   runway/lookups/handlers/base.py
	modified:   tests/unit/cfngin/hooks/test_aws_lambda.py
	modified:   tests/unit/context/test_runway.py

* Update for checks

request-checks: true

* precommits done

* Changed Pre Commit to 3.8

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,26 +1,24 @@
 name: CI/CD
 
-
 on:
   pull_request:  # any pull request
   push:
     branches:
       - master
 
-
 defaults:
   run:
     shell: bash
-
 
 env:
   AWS_DEFAULT_OUTPUT: json
   AWS_DEFAULT_REGION: us-east-1
   AWS_MAX_ATTEMPTS: 20  # retry attempts for AWS API calls
-  AWS_RETRY_MODE: standard  # defaults to "legacy"; this handles more errors
+  AWS_RETRY_MODE: adaptive  # defaults to "legacy"; this handles more errors
   NODE_VERSION: '16'
   PYTEST_ADDOPTS: --color=yes
   RUNWAY_TEST_NAMESPACE: gh-${{ github.run_id }}
+  PIPENV_IGNORE_VIRTUALENVS: '1'
 
 
 jobs:
@@ -65,9 +63,9 @@ jobs:
       - uses: actions/setup-python@v4
         id: setup-python
         with:
-          python-version: 3.8
+          python-version: 3.9
       - uses: Gr1N/setup-poetry@v7
-      - uses: actions/cache@v3.0.8
+      - uses: actions/cache@v3
         id: cache
         with:
           path: .venv
@@ -91,7 +89,8 @@ jobs:
     strategy:
       matrix:
         python-version: [3.7, 3.8, 3.9]
-        os: [ubuntu-18.04, windows-latest]
+        #python-version: [3.8, 3.9]
+        os: [ubuntu-latest, windows-latest]
     runs-on: ${{ matrix.os }}
     env:
       # populating AWS creds with fake values
@@ -109,7 +108,7 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - uses: Gr1N/setup-poetry@v7
-      - uses: actions/cache@v3.0.8
+      - uses: actions/cache@v3
         id: cache
         with:
           path: .venv
@@ -135,7 +134,7 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - uses: Gr1N/setup-poetry@v7
-      - uses: actions/cache@v3.0.8
+      - uses: actions/cache@v3
         id: cache
         with:
           path: .venv
@@ -164,9 +163,9 @@ jobs:
       - uses: actions/setup-python@v4
         id: setup-python
         with:
-          python-version: 3.8
+          python-version: 3.9
       - uses: Gr1N/setup-poetry@v7
-      - uses: actions/cache@v3.0.8
+      - uses: actions/cache@v3
         id: cache
         with:
           path: .venv
@@ -192,7 +191,8 @@ jobs:
     strategy:
       matrix:
         python-version: [3.7, 3.8, 3.9]
-        os: [ubuntu-18.04, windows-latest]
+        #python-version: [3.8, 3.9]
+        os: [ubuntu-latest, windows-latest]
     runs-on: ${{ matrix.os }}
     env:
       # populating AWS creds with fake values
@@ -212,7 +212,7 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - uses: Gr1N/setup-poetry@v7
-      - uses: actions/cache@v3.0.8
+      - uses: actions/cache@v3
         id: cache
         with:
           path: .venv
@@ -250,7 +250,7 @@ jobs:
       - uses: actions/setup-python@v4
         id: setup-python
         with:
-          python-version: 3.8
+          python-version: 3.9
       # Remove apt repos that are known to break from time to time
       # See https://github.com/actions/virtual-environments/issues/323
       - name: Remove broken apt repos (ubuntu)
@@ -259,7 +259,7 @@ jobs:
       - name: Install Dependencies (ubuntu)
         run: sudo apt-get update && sudo apt-get install sed -y
       - uses: Gr1N/setup-poetry@v7
-      - uses: actions/cache@v3.0.8
+      - uses: actions/cache@v3
         id: cache
         with:
           path: .venv
