--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,16 +20,16 @@ classifiers = [
   "Natural Language :: English",
   "Operating System :: OS Independent",
   "Programming Language :: Python :: 3",
-  "Programming Language :: Python :: 3.7",
   "Programming Language :: Python :: 3.8",
   "Programming Language :: Python :: 3.9",
+  "Programming Language :: Python :: 3.10",
 ]
 packages = [
   { include = "runway" },
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.7, <4"
+python = ">=3.8, <4"
 
 # dependencies needed for building docs are included here.
 # they are marked as "optional" and are installed as the extra "docs".
@@ -86,7 +86,7 @@ flake8-comprehensions = ">=3.7.0"  # flake8 plugin
 flake8-docstrings = ">=1.6"  # flake8 plugin
 flake8-print = ">=4.0.0"  # flake8 plugin
 flake8-use-fstring = ">=1.3"  # flake8 plugin
-isort = ">=5.10"
+isort = ">=5.12"
 mock = ">=4.0"
 moto = { version = ">=3.0", extras = ["ec2", "ecs", "iam", "s3", "ssm"] }
 mypy-boto3 = "^1.16"  # importable boto3 type annotations
@@ -171,7 +171,7 @@ force-exclude = '''
 '''
 include = '\.pyi?$'
 line-length = 88
-target-version = ["py37", "py38", "py39"]
+target-version = ["py38", "py39"]
 
 
 [tool.coverage.report]
