--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "linux",
     "win32"
   ],
-  "version": "2.6.4-post.8",
+  "version": "2.0.0-dev",
   "dependencies": {
     "tar": "^6.1.13"
   },
