updated dockerfile and version bumps

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,6 +1,6 @@
 # See here for image contents: https://github.com/microsoft/vscode-dev-containers/tree/v0.241.1/containers/ubuntu/.devcontainer/base.Dockerfile
 
-# [Choice] Ubuntu version (use ubuntu-22.04 or ubuntu-18.04 on local arm64/Apple Silicon): ubuntu-22.04, ubuntu-20.04, ubuntu-18.04
+# [Choice] Ubuntu version (use ubuntu-22.04 or ubuntu-20.04 on local arm64/Apple Silicon): ubuntu-22.04, ubuntu-20.04
 ARG VARIANT="ubuntu-22.04"
 FROM mcr.microsoft.com/vscode/devcontainers/base:0-${VARIANT}
 
@@ -13,9 +13,9 @@ RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
 # Add additional python options
 RUN sudo add-apt-repository ppa:deadsnakes/ppa
 
-# Install Python 3.7, 3.8, and 3.9
+# Install Python 3.10, 3.8, and 3.9
 RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
-    && apt-get -y install --no-install-recommends python3.7 python3.7-venv python3.7-dev \
+    && apt-get -y install --no-install-recommends python3.10 python3.10-venv python3.10-dev \
     python3.8 python3.8-venv python3.8-dev \
     python3.9 python3.9-venv python3.9-dev
 
@@ -23,7 +23,7 @@ RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
 # Setup alternatives
 RUN update-alternatives --install /usr/bin/python python /usr/bin/python3.9 1
 
-# Update to use python 3.7 by default
+# Update to use python 3.9 by default
 RUN update-alternatives --set python $(update-alternatives --list python | grep python3.9)
 
 # VSCODE user commands
@@ -44,4 +44,4 @@ RUN bash -c "export PATH=$HOME/.local/bin:\$PATH \
     && poetry completions bash > ~/.bash_completion.d/poetry.bash-completion"
 
 # Setup OS_NAME var for runway builds from this dev container
-RUN echo "export OS_NAME=ubuntu-18.04" >> ~/.bashrc
+RUN echo "export OS_NAME=ubuntu-20.04" >> ~/.bashrc
