--- a/.github/workflows/on-push-pyinstaller.yml
+++ b/.github/workflows/on-push-pyinstaller.yml
@@ -22,7 +22,7 @@ jobs:
     name: Pyinstaller "One File" Build
     strategy:
       matrix:
-        os: [macos-10.15, ubuntu-20.04, windows-latest]
+        os: [macos-12, ubuntu-20.04, windows-latest]
         python-version: [3.8]
     runs-on: ${{ matrix.os }}
     env:
@@ -72,7 +72,7 @@ jobs:
     name: Pyinstaller "One Folder" Build
     strategy:
       matrix:
-        os: [macos-10.15, ubuntu-20.04, windows-latest]
+        os: [macos-12, ubuntu-20.04, windows-latest]
         python-version: [3.8]
     runs-on: ${{ matrix.os }}
     env:
@@ -176,7 +176,7 @@ jobs:
         if: steps.check_distance.outcome == 'success'
         uses: actions/download-artifact@v3
         with:
-          name: pyinstaller-onefolder-macos-10.15
+          name: pyinstaller-onefolder-macos-12
           path: artifacts
       - name: Download Artifacts (ubuntu)
         if: steps.check_distance.outcome == 'success'
