--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -235,6 +235,8 @@ jobs:
         run: make test cov-xml
       - name: Upload to Codecov
         uses: codecov/codecov-action@v3.1.4
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
         with:
           fail_ci_if_error: true
   build-pypi:
