--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -235,6 +235,7 @@ jobs:
         run: make test cov-xml
       - name: Upload to Codecov
         uses: codecov/codecov-action@v3.1.4
+        if: matrix.os == 'ubuntu-latest' && matrix.python-version == '3.10'
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
         with:
