--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -88,8 +88,7 @@ jobs:
     name: Lint Python
     strategy:
       matrix:
-        python-version: [3.8, 3.9, '3.10']
-        #python-version: [3.8, 3.9]
+        python-version: [3.9, '3.10', '3.11']
         os: [ubuntu-latest, windows-latest]
     runs-on: ${{ matrix.os }}
     env:
@@ -126,7 +125,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.8]
+        python-version: [3.9]
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v4
@@ -190,8 +189,7 @@ jobs:
     name: Test Python
     strategy:
       matrix:
-        python-version: [3.8, 3.9, '3.10']
-        #python-version: [3.8, 3.9]
+        python-version: [3.9, '3.10', '3.11']
         os: [ubuntu-latest, windows-latest]
     runs-on: ${{ matrix.os }}
     env:
