--- a/pyproject.toml
+++ b/pyproject.toml
@@ -74,6 +74,7 @@ yamllint = "*"
 pipenv = "2022.1.8"
 moto = "3.0.5"
 testfixtures = "^7.0.3"
+wheel = "^0.42.0"
 
 [tool.poetry.dev-dependencies]
 black = ">=22.1"
