--- a/pyproject.toml
+++ b/pyproject.toml
@@ -75,6 +75,7 @@ pipenv = "2022.1.8"
 moto = "3.0.5"
 testfixtures = "^7.0.3"
 wheel = "^0.42.0"
+pyinstaller = "4.5.1"
 
 [tool.poetry.dev-dependencies]
 black = ">=22.1"
