--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,16 +20,17 @@ classifiers = [
   "Natural Language :: English",
   "Operating System :: OS Independent",
   "Programming Language :: Python :: 3",
-  "Programming Language :: Python :: 3.8",
   "Programming Language :: Python :: 3.9",
   "Programming Language :: Python :: 3.10",
+  "Programming Language :: Python :: 3.11",
+  "Programming Language :: Python :: 3.12"
 ]
 packages = [
   { include = "runway" },
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.8, <4"
+python = ">=3.9, <3.13"
 
 # dependencies needed for building docs are included here.
 # they are marked as "optional" and are installed as the extra "docs".
@@ -73,6 +74,8 @@ yamllint = "*"
 pipenv = "2022.1.8"
 moto = "3.0.5"
 testfixtures = "^7.0.3"
+wheel = "^0.42.0"
+pyinstaller = "^6.2.0"
 
 [tool.poetry.dev-dependencies]
 black = ">=22.1"
@@ -93,7 +96,6 @@ pep8-naming = ">=0.12.1"  # flake8 plugin
 pipenv = "^2022.1.8"  # only used in tests
 pre-commit = ">=2.14"
 pydocstyle = ">=6.1.1"  # flake8 plugin
-pyinstaller = ">=4.6"
 pylint = ">=2.12"
 pytest = ">=7.0"
 pytest-cov = ">=3.0"  # pytest plugin
@@ -355,7 +357,7 @@ extraPaths = [
   "./.github/scripts/urlshortener",
 ]
 pythonPlatform = "All"
-pythonVersion = "3.8"
+pythonVersion = "3.9"
 reportDuplicateImport = "none"
 reportImportCycles = "none"
 reportIncompatibleMethodOverride = "warning"
