--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -7,9 +7,20 @@ version: 2
 
 # Set the version of Python and other tools you might need
 build:
+  jobs:
+    post_create_environment:
+      # Install poetry
+      # https://python-poetry.org/docs/#installing-manually
+      - pip install poetry
+    post_install:
+      # Install dependencies with 'docs' dependency group
+      # https://python-poetry.org/docs/managing-dependencies/#dependency-groups
+      # VIRTUAL_ENV needs to be set manually for now.
+      # See https://github.com/readthedocs/readthedocs.org/pull/11152/
+      - VIRTUAL_ENV=$READTHEDOCS_VIRTUALENV_PATH poetry install --with docs,types
   os: ubuntu-22.04
   tools:
-    python: '3.9'
+    python: '3.12'
 
 # Optionally build your docs in additional formats such as PDF and ePub
 formats: all
