--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,11 +32,6 @@ packages = [
 [tool.poetry.dependencies]
 python = ">=3.9, <3.13"
 
-# dependencies needed for building docs are included here.
-# they are marked as "optional" and are installed as the extra "docs".
-# this is a workaround for ReadTheDocs to work with poetry until fill support
-# is added or poetry dependency groups are added.
-
 "backports.cached_property" = { version = "*", python = "<3.8" }
 awacs = "*"
 boto3 = "^1.16"
@@ -45,13 +40,11 @@ cfn_flip = "^1.2"  # only used in runway._cli.commands._gen_sample.utils
 click = "^8.0"
 coloredlogs = "*, !=15.0.1"
 docker = ">=3.0.0"  # used in runway.cfngin.hooks
-dunamai = { version = "^1.5", optional = true }  # docs
 formic2 = "*"  # only used in runway.cfngin.hooks.aws_lambda
 gitpython = "*"
 igittigitt = ">=2.0.5"
 importlib-metadata = { version = "*", python = "<3.8" }
 jinja2 = ">=2.7"  # used in runway.cfngin.blueprints.raw
-jsx-lexer = { version = "^1.0", optional = true }  # docs
 packaging = "*"  # component of setuptools needed for version compare
 pyOpenSSL = "*"  # For embedded hook & associated script usage
 pydantic = "^1.4"
@@ -60,12 +53,6 @@ python-hcl2 = ">=3.0.0"
 pyyaml = ">5.4"
 requests = "*"
 send2trash = "*"
-sphinx = { version = "^4.3", optional = true }  # docs
-sphinx-github-changelog = { version = "^1.1", optional = true }  # docs
-sphinx-rtd-theme = { version = "^1.0", optional = true } # docs
-sphinx-tabs = { version = "^3.2", optional = true }  # docs
-sphinxcontrib-apidoc = { version = "^0.3", optional = true }  # docs
-sphinxcontrib-programoutput = { version = "^0.17", optional = true }  # docs
 tomli = ">=1.2.2"
 troposphere = ">=2.4, <5"
 typing_extensions = "*"  # only really needed for < 3.8 but can still be used in >= 3.8
@@ -77,7 +64,7 @@ testfixtures = "^7.0.3"
 wheel = "^0.42.0"
 pyinstaller = "^6.2.0"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 black = ">=22.1"
 coverage = { version = ">=6.3", extras = ["toml"] }
 doc8 = ">=0.10"  # for linting with vscode rst extension
@@ -91,7 +78,6 @@ flake8-use-fstring = ">=1.3"  # flake8 plugin
 isort = ">=5.12"
 mock = ">=4.0"
 moto = { version = ">=3.0", extras = ["ec2", "ecs", "iam", "s3", "ssm"] }
-mypy-boto3 = "^1.16"  # importable boto3 type annotations
 pep8-naming = ">=0.12.1"  # flake8 plugin
 pipenv = "^2022.1.8"  # only used in tests
 pre-commit = ">=2.14"
@@ -108,7 +94,20 @@ semver = "^2.13"  # only used in .github/scripts/urlshortener
 testfixtures = "^7.0.3"  # TODO remove use of this dependency - was inherited
 tomli-w = ">=1.0"
 
-[tool.poetry.dev-dependencies.boto3-stubs]
+[tool.poetry.group.docs.dependencies]
+dunamai = "^1.5"
+jsx-lexer = "^1.0"
+sphinx = "^4.3"
+sphinx-github-changelog = "^1.1"
+sphinx-rtd-theme = "^1.0"
+sphinx-tabs = "^3.2"
+sphinxcontrib-apidoc = "^0.3"
+sphinxcontrib-programoutput = "^0.17"
+
+[tool.poetry.group.types.dependencies]
+mypy-boto3 = "^1.16"  # importable boto3 type annotations
+
+[tool.poetry.group.types.dependencies.boto3-stubs]
 extras = [
   "acm",
   "awslambda",
@@ -128,18 +127,6 @@ extras = [
   "sts",
 ]
 version = "^1.16"
-
-[tool.poetry.extras]
-docs = [
-  "dunamai",
-  "jsx-lexer",
-  "sphinx",
-  "sphinx-github-changelog",
-  "sphinx-rtd-theme",
-  "sphinx-tabs",
-  "sphinxcontrib-apidoc",
-  "sphinxcontrib-programoutput",
-]
 
 [tool.poetry.scripts]
 runway = "runway._cli.main:cli"
